build(assets): add assets management

--- a/package.json
+++ b/package.json
@@ -12,15 +12,12 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.56",
     "@babel/preset-env": "^7.0.0-beta.56",
     "abstract-syntax-tree": "^1.0.2",
-    "acorn": "^5.7.2",
     "angular-template-url-loader": "^1.0.2",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta",
     "base64url": "^2.0.0",
+    "copy-webpack-plugin": "^4.5.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "escodegen": "^1.11.0",
-    "esprima": "^4.0.1",
-    "esprima-ast-utils": "^0.0.7",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
@@ -32,7 +29,7 @@
     "lodash": "^4.17.10",
     "raw-loader": "^0.5.1",
     "request": "^2.88.0",
-    "to-ast": "^1.0.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^3.1.0",
