--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-template-url-loader": "^1.0.2",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.0-beta",
+    "babel-plugin-angularjs-annotate": "^0.9.0",
     "base64url": "^2.0.0",
     "copy-webpack-plugin": "^4.5.2",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
