--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.10",
     "raw-loader": "^0.5.1",
     "request": "^2.88.0",
+    "script-loader": "^0.7.2",
     "url-loader": "^1.1.1",
     "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.13.1",
