--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "less-loader": "^4.1.0",
     "less-plugin-remcalc": "^0.0.1",
     "lodash": "^4.17.10",
+    "mini-css-extract-plugin": "^0.4.2",
     "raw-loader": "^0.5.1",
     "request": "^2.88.0",
     "script-loader": "^0.7.2",
