--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.56",
+    "@babel/core": "^7.0.0",
     "@babel/generator": "^7.0.0",
     "@babel/parser": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.0-beta",
+    "babel-loader": "^8.0.0",
     "babel-plugin-angularjs-annotate": "^0.9.0",
     "base64url": "^2.0.0",
     "copy-webpack-plugin": "^4.5.2",
